# discord-to-sqlite

./: README.md  pyproject.toml
discord_to_sqlite/: cli.py  utils.py
