[tool.poetry]
name = "discord-to-sqlite"
version = "0.2"
description = "Save data from Discord to a SQLite database"
authors = ["Kim Trønnes", "Alex Ledger"]
license = "Apache License, Version 2.0"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
click = "^8.1.3"
sqlite-utils = "^3.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
